--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
 body{
     background-color: white;
 }
+
+.site {
+  display: flex;
+  min-height: 25vh;
+  flex-direction: column;
+}
+
 h1 {
     color: #9099A2; 
 }
@@ -50,6 +57,7 @@ footer {
 .cover{
     height:300px;
     margin-top:10%;
+    flex:1;
 }
 
 header {
@@ -80,6 +88,9 @@ table {
     margin: 60px;
 }
 
+a.current-link {
+    text-decoration:underline;
+}
 
 div.carousel-inner {
     height: 1000px;
