--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ footer {
 /* Homepage styles*/
 .cover{
     height:300px;
-    margin-top:10%;
+    margin-top:5%;
     flex:1;
 }
 
@@ -116,4 +116,8 @@ div.carousel {
     left: 64%;
     top: 75%;
     transform: translate(-50%,-50%);
+}
+
+nav > main {
+    margin-top: 25px;
 }
