--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ div.carousel-inner {
     width: 1250px;
     padding:50px;
     border-style:solid;
+    background-color:grey;
 }
 
 .carousel-control-prev-icon {
