--- a/style.css
+++ b/style.css
@@ -104,7 +104,10 @@ a.current-link {
     text-decoration:underline;
 }
 
-
+div.carousel-inner {
+    border-style: solid;
+    background-color:#9099A2;
+}
 
 #certifications div.carousel-inner {
     height: 1000px;
@@ -114,11 +117,11 @@ a.current-link {
     background-color:grey;
 }
 
-.carousel-control-prev-icon {
+#certifications .carousel-control-prev-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
    }
    
-   .carousel-control-next-icon {
+#certifications .carousel-control-next-icon {
      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
    }
 
